# rup

./: Cargo.toml  LICENSE  README.md  selectors.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: main.rs
src/filter/: chain_of_css.html  containing_selector.html  containing_word_selector.html  direct_child_selector.html  last_child_selector.html  mod.rs  multi_attributes.html  nth_child_selector.html  test.html
src/parser/: mod.rs
src/renderer/: document_with_space  document_with_space_expected  enable_colors  enable_colors_expected  extract_markup  extract_markup_expected  mod.rs  render_attributes  render_attributes_expected  render_partial_json_expected  render_whole_json  render_whole_json_expected  text_only  text_only_expected
