[package]
name = "rup"
version = "0.1.0"
authors = ["Anthony HAMON <hamon.anth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
markup5ever = "0.10.0"
bytebuffer = "0.2.1"
regex = "1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"