[package]
name = "rup"
version = "0.1.0"
authors = ["Anthony HAMON <hamon.anth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
markup5ever = "0.10.1"
bytebuffer = "0.2.1"
regex = "1"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
assert_cmd = "1.0"
predicates = "2"
pretty_assertions = "0.7.2"

